--- a/docker-compose-examples/docker-compose-standalone/compose.yaml
+++ b/docker-compose-examples/docker-compose-standalone/compose.yaml
@@ -4,8 +4,8 @@ services:
   autoscaler:
     image: bourgeoisiehacker/autoscaler:latest
     environment:
-      AWS_ACCESS_KEY_ID: <SETUP> # You can explicitly set AWS environment variables for authentication to AWS
-      AWS_SECRET_ACCESS_KEY: <SETUP> # You can explicitly set AWS environment variables for authentication to AWS
+#      AWS_ACCESS_KEY_ID: <SETUP> # You can explicitly set AWS environment variables for authentication to AWS
+#      AWS_SECRET_ACCESS_KEY: <SETUP> # You can explicitly set AWS environment variables for authentication to AWS
       NIMBUS_RUN_CONFIGURATION_FILE: /opt/config.yaml
       SERVER_PORT: "8080"
     ports:
