--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,5 +54,5 @@ jobs:
         working-directory: autoscaler
       - uses: stefanzweifel/git-auto-commit-action@v6
         with:
-          file_pattern: "*.pom"
+          file_pattern: "**/*.pom"
           commit_message: "Incrementing version to ${{steps.next_version.outputs.new_version }}[skip ci]"
