--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - 'v*.*.*' # Triggers when a new tag starting with 'v' and following a semantic versioning pattern is pushed
-    branches:
-      - master
+#    branches:
+#      - master
 
 jobs:
   release:
@@ -77,6 +77,11 @@ jobs:
                     -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} versions:commit
           echo "new_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
         working-directory: autoscaler
+      - name: helm update chart version
+        run: |
+          yq -i '.version = "${{steps.next_version.outputs.new_version }}"' Chart.yaml
+          yq -i '.appVersion = "${{steps.next_version.outputs.new_version }}"' Chart.yaml
+
       - uses: stefanzweifel/git-auto-commit-action@v6
         with:
           file_pattern: "**/pom.xml"
