--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -63,13 +63,13 @@ jobs:
         id: tag_version
         run: echo "tag_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
 
-      - name: deploy docker container
-        run: |
-          docker build -t bourgeoisiehacker/autoscaler:latest -f Dockerfile .
-          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
-          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:latest
-          docker push  docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
-          docker push  docker.io/bourgeoisiehacker/autoscaler:latest
+#      - name: deploy docker container
+#        run: |
+#          docker build -t bourgeoisiehacker/autoscaler:latest -f Dockerfile .
+#          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
+#          docker tag bourgeoisiehacker/autoscaler:latest docker.io/bourgeoisiehacker/autoscaler:latest
+#          docker push  docker.io/bourgeoisiehacker/autoscaler:${{steps.tag_version.outputs.tag_version}}
+#          docker push  docker.io/bourgeoisiehacker/autoscaler:latest
 
       - name: next version
         id: next_version
@@ -83,7 +83,7 @@ jobs:
         run: |
           yq -i '.version = "${{steps.next_version.outputs.new_version }}"' Chart.yaml
           yq -i '.appVersion = "${{steps.next_version.outputs.new_version }}"' Chart.yaml
-
+        working-directory: helm/nimbus-run
       - uses: stefanzweifel/git-auto-commit-action@v6
         with:
           file_pattern: "**/pom.xml"
