--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -72,11 +72,11 @@ jobs:
           java-version: '21'
           distribution: 'temurin' # Or other supported distributions like 'zulu', 'adopt', etc.
           cache: 'maven'
-      - name: build
-        run: |
-          mvn install -Paws -DskipTests
-          mvn install -Pgcp -DskipTests
-        working-directory: autoscaler
+#      - name: build
+#        run: |
+#          mvn install -Paws -DskipTests
+#          mvn install -Pgcp -DskipTests
+#        working-directory: autoscaler
       - name: Tag Version
         id: tag_version
         run: echo "tag_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
@@ -101,7 +101,7 @@ jobs:
         run: |
           yq -i '.version = "${{steps.next_version.outputs.new_version }}"' Chart.yaml
           yq -i '.appVersion = "${{steps.next_version.outputs.new_version }}"' Chart.yaml
-        working-directory: helm/nimbus-run
+        working-directory: helm/charts/nimbus-run
       - uses: stefanzweifel/git-auto-commit-action@v6
         with:
           file_pattern: "**/pom.xml **/Chart.yaml"
