--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,15 +44,13 @@ jobs:
             See changes in this release.
           files: |
             nimbus-run-${{ steps.release_name.outputs.version }}.tgz
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: '0'
       - name: package helm
         run: |
           helm package helm/charts/nimbus-run
           helm repo index . --merge docs/index.yaml
           mv index.yaml docs/
+      - name: Pull Remote Changes
+        run: git pull -r
       - uses: stefanzweifel/git-auto-commit-action@v6
         with:
           file_pattern: "**/index.yaml"
