--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: package helm
         run: |
           helm package helm/charts/nimbus-run
-          helm repo index . --merge docs/index.yaml
+          helm repo index . --merge docs/index.yaml --url https://github.com/bourgeoisie-hacker/nimbus-run/releases/download/v0.2.11/
           mv index.yaml docs/
       - uses: stefanzweifel/git-auto-commit-action@v6
         with:
