--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: '0'
+      - name: pull-latest
+        run: |
+          sleep 3
+          git pull -r
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
