--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -85,6 +85,12 @@ jobs:
         run: |
           helm package helm/charts/nimbus-run
           helm repo index . --merge docs/index.yaml
+      - name: Generate Changelog
+        id: changelog
+        uses: requarks/changelog-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag:  ${{ steps.tag_version.outputs.release_name }}
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v2
@@ -92,9 +98,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ steps.tag_version.outputs.release_name }} # Uses the pushed tag name as the release tag
           name: Release ${{ steps.tag_version.outputs.release_name }} # Sets the release name
-          body: | # Defines the release body/description
-            Automated release created from tag ${{ steps.tag_version.outputs.release_name }}.
-            See changes in this release.
+          body: ${{ steps.changelog.outputs.changes }}
           files: |
             nimbus-run-${{steps.tag_version.outputs.tag_version}}.tgz
       - name: Pull Remote Changes
